libs/tree-sitter-wing/test/corpus/expressions.txt
================================================================================
Unary minus expression
================================================================================

-1;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (unary_expression
      arg: (number))))

================================================================================
Unary not expression
================================================================================

!false;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (unary_expression
      arg: (bool))))

================================================================================
Binary expressions
================================================================================

5 * 1;
(5+1) % 1;
5+1 % 1;
5 % 1 + 1;
5 ** (1**5);
501\(99 + 1);

--------------------------------------------------------------------------------

(source
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (parenthesized_expression
        (binary_expression
          left: (number)
          right: (number)))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (binary_expression
        left: (number)
        right: (number))))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (parenthesized_expression
        (binary_expression
          left: (number)
          right: (number)))))
  (expression_statement
    (binary_expression
      left: (number)
      right: (parenthesized_expression
        (binary_expression
          left: (number)
          right: (number))))))

================================================================================
Function call
================================================================================

hello(1,a);

--------------------------------------------------------------------------------

(source
  (expression_statement
    (call
      caller: (reference
        (reference_identifier))
      args: (argument_list
        (positional_argument
          (number))
        (positional_argument
          (reference
            (reference_identifier)))))))

================================================================================
Method call
================================================================================

obj.method();

--------------------------------------------------------------------------------

(source
  (expression_statement
    (call
      caller: (reference
        (nested_identifier
          object: (reference
            (reference_identifier))
          property: (member_identifier)))
      args: (argument_list))))

================================================================================
Method call in binary expression
================================================================================

x == obj.method();

--------------------------------------------------------------------------------

(source
  (expression_statement
    (binary_expression
      left: (reference
        (reference_identifier))
      right: (call
        caller: (reference
          (nested_identifier
            object: (reference
              (reference_identifier))
            property: (member_identifier)))
        args: (argument_list)))))

================================================================================
New expression
================================================================================

new A();

--------------------------------------------------------------------------------

(source
  (expression_statement
    (new_expression
      class: (custom_type
        object: (type_identifier))
      args: (argument_list))))

================================================================================
New expression with id and scope
================================================================================

new A() as "b" in c;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (new_expression
      class: (custom_type
        object: (type_identifier))
      args: (argument_list)
      id: (string)
      scope: (reference
        (reference_identifier)))))

================================================================================
New expression with id and scope on different lines
================================================================================

new A()
  as 
  "b" 
  in 
  c;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (new_expression
      class: (custom_type
        object: (type_identifier))
      args: (argument_list)
      id: (string)
      scope: (reference
        (reference_identifier)))))

================================================================================
preflight anonymous closure
================================================================================

(a: num): num => { return a; };

--------------------------------------------------------------------------------

(source
  (expression_statement
    (preflight_closure
      (parameter_list
        (parameter_definition
          (identifier)
          (builtin_type)))
      (builtin_type)
      (block
        (return_statement
          (reference
            (reference_identifier)))))))

================================================================================
maybe-inflight anonymous closure
================================================================================

?inflight (): num => { return 1; };

--------------------------------------------------------------------------------

(source
  (expression_statement
    (maybe_inflight_closure
      (maybe_inflight_specifier)
      (parameter_list)
      (builtin_type)
      (block
        (return_statement
          (number))))))

================================================================================
inflight anonymous closure
================================================================================

inflight (): num => { return 1; };

--------------------------------------------------------------------------------

(source
  (expression_statement
    (inflight_closure
      (inflight_specifier)
      (parameter_list)
      (builtin_type)
      (block
        (return_statement
          (number))))))

================================================================================
inflight anonymous closure inferred return
================================================================================

inflight () => { return 1; };

--------------------------------------------------------------------------------

(source
  (expression_statement
    (inflight_closure
      (inflight_specifier)
      (parameter_list)
      (block
        (return_statement
          (number))))))

================================================================================
inflight anonymous closure inferred args
================================================================================

inflight (arg1) => { log(arg1); };

--------------------------------------------------------------------------------

(source
  (expression_statement
    (inflight_closure
      (inflight_specifier)
      (parameter_list
        (parameter_definition
          (identifier)))
      (block
        (expression_statement
          (call
            (reference
              (reference_identifier))
            (argument_list
              (positional_argument
                (reference
                  (reference_identifier))))))))))

================================================================================
Template string
================================================================================

"cool ${test}";

--------------------------------------------------------------------------------

(source
  (expression_statement
    (string
      (template_substitution
        (reference
          (reference_identifier))))))

================================================================================
?? operator
================================================================================

maybeVal ?? 2;
maybeVal ?? 2 + 2;
maybeVal ?? 2 == 2;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (binary_expression
      (reference
        (reference_identifier))
      (number)))
  (expression_statement
    (binary_expression
      (reference
        (reference_identifier))
      (binary_expression
        (number)
        (number))))
  (expression_statement
    (binary_expression
      (binary_expression
        (reference
          (reference_identifier))
        (number))
      (number))))

================================================================================
>>>>>>> 7e08a6d3f92f31497406dace539d6ccbabc6426e
Set Literal
================================================================================

{1, 2, 3};
Set<num> { 1, 2, 3 };
--------------------------------------------------------------------------------

(source
  (expression_statement
    (set_literal
      element: (number)
      element: (number)
      element: (number)))
  (expression_statement
    (set_literal
      type: (immutable_container_type
        type_parameter: (builtin_type))
      element: (number)
      element: (number)
      element: (number))))

================================================================================
Empty Json Map Literal
================================================================================

{};

--------------------------------------------------------------------------------

(source
  (expression_statement
    (json_literal
      (json_map_literal))))

================================================================================
Map Literal
================================================================================

{ "a" => 1, "b" => 2, "c" => 3,};

--------------------------------------------------------------------------------

(source
  (expression_statement
    (map_literal
      member: (map_literal_member
        (string)
        (number))
      member: (map_literal_member
        (string)
        (number))
      member: (map_literal_member
        (string)
        (number)))))

================================================================================
Array Literal
================================================================================

[1, 2, 3,];
Array<str>[];
--------------------------------------------------------------------------------

(source
  (expression_statement
    (array_literal
      element: (number)
      element: (number)
      element: (number)))
  (expression_statement
    (array_literal
      type: (immutable_container_type
        type_parameter: (builtin_type)))))

================================================================================
Container Type Annotation
================================================================================

let a: Array<num> = [];

--------------------------------------------------------------------------------

(source
  (variable_definition_statement
    name: (identifier)
    type: (immutable_container_type
      type_parameter: (builtin_type))
    value: (array_literal)))

================================================================================
Container Type Constructor Invocation
================================================================================

let a = new MutMap<num>();

--------------------------------------------------------------------------------

(source
  (variable_definition_statement
    name: (identifier)
    value: (new_expression
      class: (mutable_container_type
        type_parameter: (builtin_type))
      args: (argument_list))))

================================================================================
Struct literal
================================================================================

let a = A { f1: 3, f2: true };

--------------------------------------------------------------------------------

(source
  (variable_definition_statement
    name: (identifier)
    value: (struct_literal
      type: (custom_type
        object: (type_identifier))
      fields: (struct_literal_member
        (identifier)
        (number))
      fields: (struct_literal_member
        (identifier)
        (bool)))))

================================================================================
Optional test (and precedence)
================================================================================
a?;
!a?;
(!a)?;
(a.b.c)?;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (optional_test
      (reference
        (reference_identifier))))
  (expression_statement
    (unary_expression
      arg: (optional_test
        (reference
          (reference_identifier)))))
  (expression_statement
    (optional_test
      (parenthesized_expression
        (unary_expression
          arg: (reference
            (reference_identifier))))))
  (expression_statement
    (optional_test
      (parenthesized_expression
        (reference
          (nested_identifier
            object: (reference
              (nested_identifier
                object: (reference
                  (reference_identifier))
                property: (member_identifier)))
            property: (member_identifier)))))))

================================================================================
Nil
================================================================================

nil;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (nil_value)))

================================================================================
Debug panic
================================================================================

😱;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (compiler_dbg_panic)))

================================================================================
Duration
================================================================================

let ms = 10ms;
let s = 10s;
let m = 10m;
let h = 10h;
let d = 10d;
let mo = 10mo;

--------------------------------------------------------------------------------

(source
  (variable_definition_statement
    name: (identifier)
    value: (duration
      (milliseconds
        value: (number))))
  (variable_definition_statement
    name: (identifier)
    value: (duration
      (seconds
        value: (number))))
  (variable_definition_statement
    name: (identifier)
    value: (duration
      (minutes
        value: (number))))
  (variable_definition_statement
    name: (identifier)
    value: (duration
      (hours
        value: (number))))
  (variable_definition_statement
    name: (identifier)
    value: (duration
      (days
        value: (number))))
  (variable_definition_statement
    name: (identifier)
    value: (duration
      (months
        value: (number)))))
