libs/tree-sitter-wing/test/corpus/statements/class_and_resource.txt
================================================================================
Inflight class definition
================================================================================

inflight class A {
    init() {}
    inflight do_something() {}
    a_member: str;
    var b_member: num;
    static static_field: num;
    static var static_var_field: num;
    static static_method() {}
    ?inflight do_something_2() {}
    static ?inflight static_method_2() {}
}

--------------------------------------------------------------------------------

(source
  (class_definition
    (inflight_specifier)
    name: (identifier)
    implementation: (class_implementation
      (initializer
        parameter_list: (parameter_list)
        block: (block))
      (inflight_method_definition
        phase_modifier: (inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (class_field
        name: (identifier)
        type: (builtin_type))
      (class_field
        reassignable: (reassignable)
        name: (identifier)
        type: (builtin_type))
      (class_field
        static: (static)
        name: (identifier)
        type: (builtin_type))
      (class_field
        static: (static)
        reassignable: (reassignable)
        name: (identifier)
        type: (builtin_type))
      (method_definition
        static: (static)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (maybe_inflight_method_definition
        phase_modifier: (maybe_inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (maybe_inflight_method_definition
        static: (static)
        phase_modifier: (maybe_inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block)))))

================================================================================
Class inheritance
================================================================================

inflight class A extends B {}

--------------------------------------------------------------------------------

(source
  (class_definition
    (inflight_specifier)
    name: (identifier)
    parent: (custom_type
      object: (type_identifier))
    implementation: (class_implementation)))

================================================================================
Preflight class definition
================================================================================

class A {
    init() {}
    inflight init() {}
    preflight_func() {}
    async preflight_func() {}
    pub preflight_func2() {}
    inflight inflight_func() {}
    pub inflight inflight_func2(): num {}
    protected inflight inflight_func3(): num {}
    ?inflight maybe_inflight_func() {}
    pub ?inflight maybe_inflight_func2(): num {}
    protected ?inflight maybe_inflight_func3(): num {}
    pf_member: str;
    internal internal_member: str;
    inflight if_member: str;
    pub inflight var if_member2: str;
    protected inflight var if_member3: str;
    static inflight inflight_field: num;
    static inflight inflight_method() {}
    static ?inflight maybe_inflight_method() {}
}

--------------------------------------------------------------------------------

(source
  (resource_definition
    name: (identifier)
    implementation: (resource_implementation
      (initializer
        parameter_list: (parameter_list)
        block: (block))
      (initializer
        inflight: (inflight_specifier)
        parameter_list: (parameter_list)
        block: (block))
      (method_definition
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (method_definition
        async: (async_modifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (method_definition
        access_modifier: (access_modifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (inflight_method_definition
        phase_modifier: (inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (inflight_method_definition
        access_modifier: (access_modifier)
        phase_modifier: (inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        type: (builtin_type)
        block: (block))
      (inflight_method_definition
        access_modifier: (access_modifier)
        phase_modifier: (inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        type: (builtin_type)
        block: (block))
      (maybe_inflight_method_definition
        phase_modifier: (maybe_inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (maybe_inflight_method_definition
        access_modifier: (access_modifier)
        phase_modifier: (maybe_inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        type: (builtin_type)
        block: (block))
      (maybe_inflight_method_definition
        access_modifier: (access_modifier)
        phase_modifier: (maybe_inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        type: (builtin_type)
        block: (block))
      (class_field
        name: (identifier)
        type: (builtin_type))
      (class_field
        access_modifier: (access_modifier)
        name: (identifier)
        type: (builtin_type))
      (class_field
        phase_modifier: (inflight_specifier)
        name: (identifier)
        type: (builtin_type))
      (class_field
        access_modifier: (access_modifier)
        phase_modifier: (inflight_specifier)
        reassignable: (reassignable)
        name: (identifier)
        type: (builtin_type))
      (class_field
        access_modifier: (access_modifier)
        phase_modifier: (inflight_specifier)
        reassignable: (reassignable)
        name: (identifier)
        type: (builtin_type))
      (class_field
        static: (static)
        phase_modifier: (inflight_specifier)
        name: (identifier)
        type: (builtin_type))
      (inflight_method_definition
        static: (static)
        phase_modifier: (inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block))
      (maybe_inflight_method_definition
        static: (static)
        phase_modifier: (maybe_inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list)
        block: (block)))))

================================================================================
Preflight class inheritance
================================================================================

class A extends B impl C, D {}

--------------------------------------------------------------------------------

(source
  (resource_definition
    name: (identifier)
    parent: (custom_type
      object: (type_identifier))
    implements: (custom_type
      object: (type_identifier))
    implements: (custom_type
      object: (type_identifier))
    implementation: (resource_implementation)))

================================================================================
Interface definition
================================================================================

interface A extends B, C {
    do_something();
    inflight do_something_else(x: str): num;
    a_member: str;
    inflight b_member: num;
}

--------------------------------------------------------------------------------

(source
  (interface_definition
    name: (identifier)
    extends: (custom_type
      object: (type_identifier))
    extends: (custom_type
      object: (type_identifier))
    implementation: (interface_implementation
      (method_signature
        name: (identifier)
        parameter_list: (parameter_list))
      (inflight_method_signature
        phase_modifier: (inflight_specifier)
        name: (identifier)
        parameter_list: (parameter_list
          (parameter_definition
            name: (identifier)
            type: (builtin_type)))
        type: (builtin_type))
      (class_field
        name: (identifier)
        type: (builtin_type))
      (class_field
        phase_modifier: (inflight_specifier)
        name: (identifier)
        type: (builtin_type)))))
